--- a/islami/index.html
+++ b/islami/index.html
@@ -1,1 +1,231 @@
-<!DOCTYPE html><br/><html lang="id"><br/><head><br/>    <meta charset="UTF-8"><br/>    <meta name="viewport" content="width=device-width, initial-scale=1.0"><br/>    <title>Islamic Website</title><br/>    <style><br/>        /* General Styles */<br/>        body {<br/>            font-family: 'Arial', sans-serif;<br/>            margin: 0;<br/>            padding: 0;<br/>            background-color: #f4f8f3;<br/>            color: #333;<br/>            scroll-behavior: smooth;<br/>        }<div></div>        /* Header & Navbar */<br/>        header {<br/>            display: flex;<br/>            justify-content: space-between;<br/>            align-items: center;<br/>            padding: 15px 40px;<br/>            background-color: #2e7d32;<br/>            color: white;<br/>            position: sticky;<br/>            top: 0;<br/>            width: 100%;<br/>            z-index: 1000;<br/>        }<div></div>        .logo {<br/>            font-size: 24px;<br/>            font-weight: bold;<br/>        }<div></div>        nav ul {<br/>            list-style: none;<br/>            padding: 0;<br/>            margin: 0;<br/>            display: flex;<br/>        }<div></div>        nav ul li {<br/>            margin-left: 20px;<br/>        }<div></div>        nav ul li a {<br/>            color: white;<br/>            text-decoration: none;<br/>            font-size: 16px;<br/>            padding: 10px;<br/>            transition: background 0.3s;<br/>        }<div></div>        nav ul li a:hover {<br/>            background-color: rgba(255, 255, 255, 0.2);<br/>            border-radius: 5px;<br/>        }<div></div>        /* Hero Section */<br/>        .hero {<br/>            text-align: center;<br/>            padding: 120px 20px;<br/>            background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), <br/>                        url('https://source.unsplash.com/1600x900/?mosque,islamic');<br/>            background-size: cover;<br/>            background-position: center;<br/>            color: white;<br/>        }<div></div>        .hero h1 {<br/>            font-size: 40px;<br/>            margin-bottom: 10px;<br/>        }<div></div>        .hero p {<br/>            font-size: 20px;<br/>        }<div></div>        .btn {<br/>            display: inline-block;<br/>            margin-top: 20px;<br/>            padding: 12px 24px;<br/>            background-color: #ffcc00;<br/>            color: black;<br/>            text-decoration: none;<br/>            font-weight: bold;<br/>            border-radius: 5px;<br/>            transition: background 0.3s;<br/>        }<div></div>        .btn:hover {<br/>            background-color: #ffb300;<br/>        }<div></div>        /* About Section */<br/>        .about {<br/>            text-align: center;<br/>            padding: 60px 20px;<br/>            background-color: #ffffff;<br/>        }<div></div>        .about h2 {<br/>            color: #2e7d32;<br/>        }<div></div>        /* Services Section */<br/>        .services {<br/>            text-align: center;<br/>            padding: 60px 20px;<br/>        }<div></div>        .service-container {<br/>            display: flex;<br/>            justify-content: center;<br/>            gap: 20px;<br/>            flex-wrap: wrap;<br/>        }<div></div>        .service-card {<br/>            background-color: white;<br/>            padding: 25px;<br/>            width: 320px;<br/>            border-radius: 10px;<br/>            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);<br/>            transition: transform 0.3s;<br/>        }<div></div>        .service-card:hover {<br/>            transform: scale(1.05);<br/>        }<div></div>        .service-card h3 {<br/>            color: #2e7d32;<br/>        }<div></div>        /* Footer */<br/>        footer {<br/>            text-align: center;<br/>            padding: 20px;<br/>            background-color: #2e7d32;<br/>            color: white;<br/>        }<div></div>        /* Responsiveness */<br/>        @media (max-width: 768px) {<br/>            header {<br/>                flex-direction: column;<br/>                text-align: center;<br/>            }<div></div>            nav ul {<br/>                flex-direction: column;<br/>                gap: 10px;<br/>                margin-top: 10px;<br/>            }<div></div>            .hero {<br/>                padding: 80px 20px;<br/>            }<div></div>            .hero h1 {<br/>                font-size: 32px;<br/>            }<div></div>            .hero p {<br/>                font-size: 18px;<br/>            }<div></div>            .service-container {<br/>                flex-direction: column;<br/>                align-items: center;<br/>            }<br/>        }<br/>    </style><br/></head><br/><body><div></div>    <!-- Navbar --><br/>    <header><br/>        <div class="logo">IslamicSite</div><br/>        <nav><br/>            <ul><br/>                <li><a href="#home">Beranda</a></li><br/>                <li><a href="#about">Tentang</a></li><br/>                <li><a href="#services">Layanan</a></li><br/>                <li><a href="#contact">Kontak</a></li><br/>            </ul><br/>        </nav><br/>    </header><div></div>    <!-- Hero Section --><br/>    <section id="home" class="hero"><br/>        <h1>Selamat Datang di IslamicSite</h1><br/>        <p>Menyebarkan Cahaya Islam dengan Teknologi Modern</p><br/>        <a href="#about" class="btn">Pelajari Lebih Lanjut</a><br/>    </section><div></div>    <!-- About Section --><br/>    <section id="about" class="about"><br/>        <h2>Tentang Kami</h2><br/>        <p>Kami hadir untuk menyebarkan nilai-nilai Islam dengan tampilan modern dan kemudahan akses bagi semua umat.</p><br/>    </section><div></div>    <!-- Services Section --><br/>    <section id="services" class="services"><br/>        <h2>Layanan Kami</h2><br/>        <div class="service-container"><br/>            <div class="service-card"><br/>                <h3>Artikel Islami</h3><br/>                <p>Kajian dan tulisan islami untuk menambah ilmu.</p><br/>            </div><br/>            <div class="service-card"><br/>                <h3>Jadwal Sholat</h3><br/>                <p>Informasi jadwal sholat berdasarkan lokasi Anda.</p><br/>            </div><br/>            <div class="service-card"><br/>                <h3>Al-Qur'an Digital</h3><br/>                <p>Baca dan dengarkan ayat-ayat suci Al-Qur'an.</p><br/>            </div><br/>        </div><br/>    </section><div></div>    <!-- Footer --><br/>    <footer><br/>        <p>&copy; 2025 IslamicSite. Semua Hak Dilindungi.</p><br/>    </footer><div></div></body><br/></html>
+<!DOCTYPE html>
+<html lang="id">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Islamic Website</title>
+    <style>
+        /* General Styles */
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f8f3;
+            color: #333;
+            scroll-behavior: smooth;
+        }
+
+        /* Header & Navbar */
+        header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 15px 40px;
+            background-color: #2e7d32;
+            color: white;
+            position: sticky;
+            top: 0;
+            width: 100%;
+            z-index: 1000;
+        }
+
+        .logo {
+            font-size: 24px;
+            font-weight: bold;
+        }
+
+        nav ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+        }
+
+        nav ul li {
+            margin-left: 20px;
+        }
+
+        nav ul li a {
+            color: white;
+            text-decoration: none;
+            font-size: 16px;
+            padding: 10px;
+            transition: background 0.3s;
+        }
+
+        nav ul li a:hover {
+            background-color: rgba(255, 255, 255, 0.2);
+            border-radius: 5px;
+        }
+
+        /* Hero Section */
+        .hero {
+            text-align: center;
+            padding: 120px 20px;
+            background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
+                        url('https://source.unsplash.com/1600x900/?mosque,islamic');
+            background-size: cover;
+            background-position: center;
+            color: white;
+        }
+
+        .hero h1 {
+            font-size: 40px;
+            margin-bottom: 10px;
+        }
+
+        .hero p {
+            font-size: 20px;
+        }
+
+        .btn {
+            display: inline-block;
+            margin-top: 20px;
+            padding: 12px 24px;
+            background-color: #ffcc00;
+            color: black;
+            text-decoration: none;
+            font-weight: bold;
+            border-radius: 5px;
+            transition: background 0.3s;
+        }
+
+        .btn:hover {
+            background-color: #ffb300;
+        }
+
+        /* About Section */
+        .about {
+            text-align: center;
+            padding: 60px 20px;
+            background-color: #ffffff;
+        }
+
+        .about h2 {
+            color: #2e7d32;
+        }
+
+        /* Services Section */
+        .services {
+            text-align: center;
+            padding: 60px 20px;
+        }
+
+        .service-container {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            flex-wrap: wrap;
+        }
+
+        .service-card {
+            background-color: white;
+            padding: 25px;
+            width: 320px;
+            border-radius: 10px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s;
+        }
+
+        .service-card:hover {
+            transform: scale(1.05);
+        }
+
+        .service-card h3 {
+            color: #2e7d32;
+        }
+
+        /* Footer */
+        footer {
+            text-align: center;
+            padding: 20px;
+            background-color: #2e7d32;
+            color: white;
+        }
+
+        /* Responsiveness */
+        @media (max-width: 768px) {
+            header {
+                flex-direction: column;
+                text-align: center;
+            }
+
+            nav ul {
+                flex-direction: column;
+                gap: 10px;
+                margin-top: 10px;
+            }
+
+            .hero {
+                padding: 80px 20px;
+            }
+
+            .hero h1 {
+                font-size: 32px;
+            }
+
+            .hero p {
+                font-size: 18px;
+            }
+
+            .service-container {
+                flex-direction: column;
+                align-items: center;
+            }
+        }
+    </style>
+</head>
+<body>
+
+    <!-- Navbar -->
+    <header>
+        <div class="logo">IslamicSite</div>
+        <nav>
+            <ul>
+                <li><a href="#home">Beranda</a></li>
+                <li><a href="#about">Tentang</a></li>
+                <li><a href="#services">Layanan</a></li>
+                <li><a href="#contact">Kontak</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Hero Section -->
+    <section id="home" class="hero">
+        <h1>Selamat Datang di IslamicSite</h1>
+        <p>Menyebarkan Cahaya Islam dengan Teknologi Modern</p>
+        <a href="#about" class="btn">Pelajari Lebih Lanjut</a>
+    </section>
+
+    <!-- About Section -->
+    <section id="about" class="about">
+        <h2>Tentang Kami</h2>
+        <p>Kami hadir untuk menyebarkan nilai-nilai Islam dengan tampilan modern dan kemudahan akses bagi semua umat.</p>
+    </section>
+
+    <!-- Services Section -->
+    <section id="services" class="services">
+        <h2>Layanan Kami</h2>
+        <div class="service-container">
+            <div class="service-card">
+                <h3>Artikel Islami</h3>
+                <p>Kajian dan tulisan islami untuk menambah ilmu.</p>
+            </div>
+            <div class="service-card">
+                <h3>Jadwal Sholat</h3>
+                <p>Informasi jadwal sholat berdasarkan lokasi Anda.</p>
+            </div>
+            <div class="service-card">
+                <h3>Al-Qur'an Digital</h3>
+                <p>Baca dan dengarkan ayat-ayat suci Al-Qur'an.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2025 IslamicSite. Semua Hak Dilindungi.</p>
+    </footer>
+
+</body>
+</html>
